--- a/lit_survey/lit_survey.tex
+++ b/lit_survey/lit_survey.tex
@@ -1,1 +1,37 @@
-% literature survey will go here... later
+\documentclass{article}
+\usepackage{fullpage}
+
+\title{CMSC724: Literature Survey \\
+Applying Compression Techniques in MapReduce}
+
+\author{Greg Benjamin, Samet Ayhan, Kishan Sudusinghe \\
+University of Maryland, College Park}
+
+\begin{document}
+\maketitle
+
+\section{Inspiration: Floratou et al.}
+
+\section{Background}
+\subsection{MapReduce}
+\subsection{Column-stores}
+\subsection{Parallel Databases (?)}
+
+\section{MapReduce Performance}
+\subsection{Serialization and Data Format}
+\subsection{Data Layout}
+\subsection{Indexing}
+\subsection{Data Compression}
+
+\section{Other Concerns}
+\subsection{Energy Efficiency}
+\subsection{anything else i'm forgetting (?)}
+
+\begin{thebibliography}{10}
+
+\bibitem{ref:floratou} Avrilia Floratou, Jignesh M. Patel, Eugene J. Shekita, and Sandeep
+	Tata. 2011. Column-oriented storage techniques for MapReduce.
+	Proc. VLDB Endow. 4, 7 (April 2011), 419-429.
+
+\end{thebibliography}
+\end{document}
