--- a/lit_survey/lit_survey.tex
+++ b/lit_survey/lit_survey.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[twocolumn]{article}
 \usepackage{fullpage}
 
 \title{CMSC724: Literature Survey \\
@@ -6,6 +6,7 @@ Applying Compression Techniques in MapReduce}
 
 \author{Greg Benjamin, Samet Ayhan, Kishan Sudusinghe \\
 University of Maryland, College Park}
+\date{}
 
 \begin{document}
 \maketitle
